--- a/FileSystem_Application/src/View/FileSystem_Window.form
+++ b/FileSystem_Application/src/View/FileSystem_Window.form
@@ -325,6 +325,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Prepare disk"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDiskActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
