--- a/FileSystem_Application/src/View/FileSystem_Window.form
+++ b/FileSystem_Application/src/View/FileSystem_Window.form
@@ -56,7 +56,7 @@
         <Component class="javax.swing.JTree" name="jTree">
           <Properties>
             <Property name="model" type="javax.swing.tree.TreeModel" editor="org.netbeans.modules.form.editors2.TreeModelEditor">
-              <TreeModel code="Root&#xa;  root1&#xa;   root2&#xa;   root2.1&#xa;  rootS&#xa;   roots1"/>
+              <TreeModel code="Root&#xa; dummy"/>
             </Property>
           </Properties>
           <Events>
